<resources>
    <string name="accounts">Accounts</string>
    <string name="add_account">Add account...</string>
    <string name="app_name">Accessible Minesweeper</string>
    <string name="attention">Attention</string>
    <string name="connect">Connect</string>
    <string name="connect_text">This application requests permission to connect your mobile device to the cloud.</string>
    <string name="connect_to_the_cloud">Connect To The Cloud</string>
    <string name="connected_to_the_cloud">Connected To The Cloud</string>
    <string name="contacting_server">Contacting server...</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnect_text">This device is currently connected to the cloud as %1$s.</string>
    <string name="do_you_want_to_connect">Do you want to connect?</string>
    <string name="do_you_want_to_disconnect">Do you want to disconnect?</string>
    <string name="needs_account">To receive notifications from this app, you must first create an account.</string>
    <string name="registration_error">Failed to register/unregister %1$s.</string>
    <string name="registration_succeeded">Registered %1$s for C2DM messaging.</string>
    <string name="say_hello">Say Hello</string>
    <string name="select_account">Select the account you wish to authorize:</string>
    <string name="skip">Skip</string>
    <string name="unregistration_succeeded">Unegistered %1$s for C2DM messaging.</string>
    <string name="group_name">A game by, Blind Faith Games</string>
    <string name="mode">This application works on portrait mode.</string>
    <string name="interactionMode_select">This is a research project that tries to gather insight on how blind people play games on mobile
	devices and how developers could make games that are not only accessible, but also enjoyable for them. Select an interaction mode depending
	on if you have visual discapacity or not. To select make a long press to select an option</string>
    <string name="interactionMode_select_TTS">This is a research project that tries to gather insight on how blind people play games on mobile
	devices and how developers could make games that are not only accessible, but also enjoyable for them. Select an interaction mode depending
	on if you have visual discapacity or not. To select make a long press to select an option</string>
    <string name="blindMode_label">Blind interaction</string>
    <string name="noBlindMode_label">Standard interaction</string>
    <string name="tts_select">In order to get a better game experience, we recommend you to download the "IVONA Text-to-Speech HQ" synthesizer. Blind Faith Games is not associated or have any relation with IVONA project but we think that is the best
	synthetizer. Would you like to install it?</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="introMessage">Welcome, please select a difficulty</string>
    <string name="intro_main_menu">Main menu Accessible Minesweeper, you can navigate through the menu by making simple taps in the different options
    							 and just make a long press to select one of the options below</string>
    <string name="buttonMessage">Go!</string>
    <string name="create">Create new log</string>
    <string name="minesweeperActivity">Minesweeper game</string>
    <string name="gameOverMessage">Game Over!</string>
    <string name="resetButtonMessage">Reset</string>
    <string name="exitButton">Exit</string>
    <string name="main_title">Accessible Minesweeper</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="tutorial_label">Game Tutorial</string>
    <string name="keyConf_label">Key Configuration</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="about_title">About Accessible Minesweeper</string>
    <string name="about_text">
		Accessible Minesweeper, 2012. \n\n
		
		Accessible Minesweeper is part of Blind Faith Games (BFG), a research project about how to deliver eyes-free game experiences that are enjoyable on your Android&#8482; 
		device regardless of your sight capabilities. If you have some time to spare, please help us to improve the game by filling in the feedback form that can be reached from the main menu.\n\n
		
		
		BFG is a project of the e-UCM research group, developed by Gloria Pozuelo and Javier Álvarez.\n
		e-UCM is a research group of the Department of Software Engineering and Artificial Intelligence at the Complutense University of Madrid.\n\n
		
		More info at: <a href="http://blind-faith-games.e-ucm.es">http://blind-faith-games.e-ucm.es</a>\n
		Contact us at: android@e-ucm.es  \n\n      
		
		<i>Android is a trademark of Google Inc.</i>
	</string>
    <string name="settings_label">Settings</string>
    <string name="settings_title">Minesweeper settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="transcription_title">Transcription mode</string>
    <string name="transcription_summary">It shows text that contains the TTS speech</string>
    <string name="blind_interaction_title">Blind Interaction Mode</string>
    <string name="blind_interaction_summary">It adds one more touch to every screen touch event</string>
    <string name="blind_mode_title">Black Screen Mode</string>
    <string name="blind_mode_summary">Allows you to use the application without any visual reference in the game and main menu.</string>
    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="game_title">Game</string>
    <string name="flags_label">Turn Explore</string>
    <string name="flags_title">Flags settings</string>
    <string name="flags_shortcut">f</string>
    <string name="instructions_label">Instructions</string>
    <string name="instructions_title">Instructions Minesweeper</string>
    <string name="instructions_general_label">Instructions</string>
    <string name="instructions_general_title">Instructions Minesweeper</string>
    <string name="instructions_controls_label">Controls</string>
    <string name="instructions_controls_title">Controls Minesweeper</string>
    <string name="instructions_general_text">The board is a mesh of buttons and some of them hide a mine. Your 
		goal is to find all of those mines, without detonating any of them.\n\n
		You can press any cell -dig mode- or mark it -exploration mode- 
		with a flag, if you think it contains a mine. When you press a cell, several cells
		can be discovered, and they will show you how many mines are around them.\n\n
		\n\n
		Options: make use of the settings while you are in the main menu in order to 
		turn on the Speech synthesizer as well as music.</string>
    <string name="instructions_controls_text">To play Android Minesweeper there are several controls you should know:\n\n
		
		Buttons, use:\n
		- menu button - to repeat the last synthetizer voice message\n 
		- mute button - switch between exploration and dig mode\n
		- volume up button - turn on/off zoom mode\n
		- camera button - listen to controls hints\n
		- volume down key - listen to cell coordinates\n
		- search button - listen to the cell context information, that is, you will listen at every cell information, 
		that surround the selected one, beginning at the top cell and ending at the top left cell in clockwise order.\n\n
		
		If you don\'t have any of this buttons, you can change them, by making a simple tap on Key Configurations.\n\n
		
		Play with touch screen, use:\n
		- one tap, to select a cell\n
		- two taps, to dig a cell\n
		- three taps, to explore a cell\n
		- drag, to listen different features of the cell\n\n
		
		Play with keyboard, use:\n
		- arrows, to select a cell\n
		- enter button or similar, to dig or explore\n\n
		
		While in zoom mode, enter button or tap to dig or explore.</string>
    <string name="cellStatePushed">Pushed</string>
    <string name="cellStateNotPushed">Not Pushed</string>
    <string name="cellStateMine">Mine</string>
    <string name="cellStateFlagged">Flagged</string>
    <string name="cellStateUnknown">Unknown state</string>
    <string name="synthetizer_title">Synthesizer</string>
    <string name="synthesizer_suggestion">We recommend you to download the "IVONA Text-to-Speech HQ" synthesizer</string>
    <string name="LosePositiveButtonLabel">Reset</string>
    <string name="LoseNegativeButtonLabel">Back to the main menu</string>
    <string name="WinPositiveButtonLabel">Ok</string>
    <string name="LoseDialogTitle">Game Over</string>
    <string name="WinDialogTitle">CONGRATULATIONS!</string>
    <string name="WinDialogMessage">"This time you win!"</string>
    <string name="tts_title">Default TTS</string>
    <string name="tts_summary">Enables voice synthetizer</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="options">Options</string>
    <string name="search">Search</string>
    <string name="alert_dialog_difficulty_TTStext">Dialog difficulty</string>
    <string name="alert_dialog_instructions_TTStext">Dialog</string>
    <string name="main_menu_initial_TTStext">Main menu</string>
    <string name="settings_menu_initial_TTStext">Menu settings. 
			    By tapping on each element on this menu changes and reads an option. Particular in this menu you can
			    find two profile options\: A and B whose activation enables another options on the menu. Of course, 
			    you can continue enabling independently all option on the menu. You will find the next options on this menu\: 
   </string>
    <string name="button_coord">Coordinates Button</string>
    <string name="button_instr">Instructions Button</string>
    <string name="button_zoom">Zoom Button</string>
    <string name="button_exploration">Exploration Button</string>
    <string name="button_context">Reading cell context</string>
    <string name="button_repeat">To repeat last sinthetizer voice message</string>
    <string name="form_label">Form</string>
    <string name="form_intro">This is a research project that tries to gather insight on how blind people play games on mobile
					devices and how developers could make games that are not only accessible, but also enjoyable
					for them. To fulfill these goals, we would like to know some details about you and how you
					interact with technologies in general and games in particular. This will help us to interpret your
					answers to this questionnaire. All the information collected through this questionnaire will be
					anonymous, untraceable and will be treated confidentially and only used for the purpose of the
					study. \n
	</string>
    <string name="radio11">I am legally blind</string>
    <string name="radio12">My vision is limited</string>
    <string name="radio13">I have no visual disability</string>
    <string name="na">NA</string>
    <string name="next_context">Next</string>
    <string name="previous_context">Previous</string>
    <string name="instructions_dialog_select">Select controls or instructions</string>
    <string name="game_dialog_select">Select difficulty</string>
    <string name="action_exploration">Exploration mode</string>
    <string name="action_coordinates">Coordinates</string>
    <string name="action_zoom">Zoom mode</string>
    <string name="action_context">Reading cell context</string>
    <string name="action_instructions">Instructions</string>
    <string name="action_repeat">To repeat sinthetizer voice message</string>
</resources>