<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:shrinkColumns="1"
    android:stretchColumns="2">

    <TableRow 
    	android:id="@+id/zoom_row"
    	android:contentDescription="@string/action_zoom">
        <TextView
            android:layout_column="1"
            android:text="@string/action_zoom"
            android:padding="3dip" />
	    <Button 
	        android:id="@+id/buttonZoom"
	        android:layout_width="fill_parent"
	        android:text="@string/action_zoom"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/button_zoom"/>
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow
    	android:id="@+id/exploration_row"
    	android:contentDescription="@string/action_exploration">
        <TextView
            android:layout_column="1"
            android:text="@string/action_exploration"
            android:padding="3dip" />
	    <Button 
	        android:id="@+id/buttonExploration"
	        android:layout_width="fill_parent"
	        android:text="@string/action_exploration"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/button_exploration"/>
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow
    	android:id="@+id/instructions_row"
    	android:contentDescription="@string/action_instructions">
        <TextView
            android:layout_column="1"
            android:text="@string/action_instructions"
            android:padding="3dip" />
	    <Button 
	        android:id="@+id/buttonInstructions"
	        android:layout_width="fill_parent"
	        android:text="@string/action_instructions"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/button_instr"/>
    </TableRow>
    
     <View
	     android:layout_height="2dip"
	     android:background="#FF909090" />
    
     <TableRow 	
     	android:id="@+id/coordinates_row"
    	android:contentDescription="@string/action_coordinates">
        <TextView
            android:layout_column="1"
            android:text="@string/action_coordinates"
            android:padding="3dip" />
	    <Button
	        android:id="@+id/buttonCoordinates"
	        android:layout_width="fill_parent"
	        android:text="@string/action_coordinates"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/button_coord" />
    </TableRow>
    
    <View
	     android:layout_height="2dip"
	     android:background="#FF909090" />
    
     <TableRow
    	android:id="@+id/context_row"
    	android:contentDescription="@string/action_context">
        <TextView
            android:layout_column="1"
            android:text="@string/action_context"
            android:padding="3dip" />
	    <Button
	        android:id="@+id/buttonContext"
	        android:layout_width="fill_parent"
	        android:text="@string/action_context"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/button_context" />
    </TableRow>
    
     <View
	     android:layout_height="2dip"
	     android:background="#FF909090" />
    
     <TableRow    	
     	android:id="@+id/repeat_row"
    	android:contentDescription="@string/action_repeat">
        <TextView
            android:layout_column="1"
            android:text="@string/action_repeat"
            android:padding="5dip" />
	    <Button
	        android:id="@+id/buttonRepeat"
	        android:layout_width="fill_parent"
	        android:text="@string/action_repeat"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/button_repeat" />
    </TableRow>

</TableLayout>
