<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:padding="30dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/new_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blind_background_button"
            android:contentDescription="@string/new_game_label"
            android:text="@string/new_game_label"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/tutorial_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blind_background_button"
            android:contentDescription="@string/tutorial_label"
            android:text="@string/tutorial_label"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blind_background_button"
            android:contentDescription="@string/settings_label"
            android:text="@string/settings_label"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/keyConf_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blind_background_button"
            android:contentDescription="@string/keyConf_label"
            android:text="@string/keyConf_label"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blind_background_button"
            android:contentDescription="@string/instructions_label"
            android:text="@string/instructions_label"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/about_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blind_background_button"
            android:contentDescription="@string/about_label"
            android:text="@string/about_label"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/form_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blind_background_button"
            android:contentDescription="@string/form_label"
            android:text="@string/form_label"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blind_background_button"
            android:contentDescription="@string/exit_label"
            android:text="@string/exit_label"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>