<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="10dp" android:gravity="center_horizontal">
 
	<TextView android:id="@+id/TextView01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/LoseDialogTitle"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:contentDescription="@string/LoseDialogTitle"/>
			
	<Button android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/reset_button"
			android:layout_below="@+id/TextView01"
			android:text="@string/LosePositiveButtonLabel"
			android:contentDescription="@string/LosePositiveButtonLabel" 
			android:layout_alignRight="@+id/TextView01" android:layout_alignLeft="@+id/TextView01"/>
			
	<Button android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/back_button"
			android:layout_below="@+id/reset_button"
			android:text="@string/LoseNegativeButtonLabel"
			android:contentDescription="@string/LoseNegativeButtonLabel" 
			android:layout_alignLeft="@+id/reset_button" android:layout_alignRight="@+id/TextView01"/>


</RelativeLayout>
