<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="10dp" android:gravity="center_horizontal">
 
	<TextView android:id="@+id/TextView01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/instructions_dialog_select"/>
			
    <Button android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/controls_button"
			android:layout_below="@+id/TextView01"
			android:text="@string/instructions_controls_label"
			android:contentDescription="@string/instructions_controls_label" android:layout_alignLeft="@+id/TextView01" android:layout_alignRight="@+id/TextView01"/>
			
	<Button android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/instructions_general_button"
			android:layout_below="@+id/controls_button"
			android:text="@string/instructions_general_label"
			android:contentDescription="@string/instructions_general_label" 
			android:layout_alignRight="@+id/controls_button" 
			android:layout_alignLeft="@+id/controls_button"/>

</RelativeLayout>
